--- a/documentation/oo_user_guide.adoc
+++ b/documentation/oo_user_guide.adoc
@@ -20,34 +20,34 @@ This document assumes that you are working against an OpenShift Origin installat
 === How is OpenShift Origin Different from OpenShift Online?
 The rhc tools work interchangeably with OpenShift Online and OpenShift Origin, however, OpenShift Origin gives the administrator complete flexibility in assigning resources (like RAM and disk space) to application gears. OpenShift Origin can also be deployed on a private network, making it a better fit for enterprise and secure development environments.
 
-== Setting Up a Development Environment
+== Configurando o Ambiente de Desenvolvimento 
 
-Servers used::
+Servidores utilizados::
 * localhost
 
-Tools used::
+Ferramentas utilizadas::
 * `rhc`
 
-In order to work with OpenShift applications from the command line, you will need to install the `rhc` utility on your client system. See the link:oo_client_tools_installation_guide.html[Client Tools installation Guide] for instructions on how to do this.
+Para trabalhar com o Openshift através da linha de comando, você precisará instalar a gem 'rhc' em seu sistema. Consulte link:oo_client_tools_installation_guide.html[Guia de Instalação de Ferramentas] para instruções de como fazê-lo.
 
-=== Configuring `rhc`
-By default, the RHC command line tool will attempt to connect the publicly hosted OpenShift environment at https://www.openshift.com/[www.openshift.com]. If you are going to work against a different OpenShift deployment, you will need to tell `rhc` where the deployment's link:oo_system_architecture_guide.html#broker[Broker] host can be found. To provide this information, run the setup command with the `--server` flag:
+=== Configurando `rhc`
+Por padrão, o RHC se conectará ao host público do OpenShift em https://www.openshift.com/[www.openshift.com]. Se você for trabalhar com alguma outra ferramenta de deploy, você precisará informar ao `rhc` onde o host denominado link:oo_system_architecture_guide.html#broker[Broker]' pode ser encontrado. Para fornecer esta informação, rode o comando setup com a flag `--server`:
 
 ----
 $ rhc setup --server <broker hostname>
 ----
 
-*Getting to a Broker Running Inside a Virtual Machine* +
-If you are running OpenShift Origin from the all-in-one VM, you will need to experiment to determine the best way to communicate with the Broker inside. In a recent troubleshooting session, we found that external `rhc` clients could not connect to an Origin virtual machine with a NATed network configuration. Using a "bridged" network configuration seemed to solve the problem. The specific network configuration options will vary by virtual machine service (Virtual Box, VMWare, etc.)
+*Broker Rodando dentro de uma Virtual Machine* +
+Se você utiliza o OpenShift Origin a partir de uma all-in-one VM, você precisará experimentar qual o melhor método para se comunicar com o Broker interno. Em uma recente sessão de troubleshooting, nós determinamos que clientes `rhc` externos não conseguiam se conectar a uma máquina virtual com uma rede NAT. Utilziar uma rede com "bridge" aparentemente resolveu o problema. A configuração específica de rede pode variar com cada servicço de VM (Virtual Box, VMWare, etc.)
 
-Once you enter in that command, you will be prompted for the username that you would like to authenticate with. If you are using the link:oo_deployment_guide_vm.html[OpenShift Origin virtual machine], you can authenticate with user "demo", password "changeme".
+Uma vez que você entrar com o comando acima, o terminal solicitará o usuário com o qual voc6e gostaria de se autenticar. Caso você utilize o link:oo_deployment_guide_vm.html[OpenShift Origin virtual machine], você pode se autenticar com o usuário "demo" e a senha "changeme".
 
-The next step in the setup process is to create and upload our SSH key to the broker server. This is required for pushing your source code, via git, up to the OpenShift Origin server.
+O próximo passo do processo de instalação consiste em criar e fazer o upload de uma chave SSH para o broker. Isso é necessário para realziar push nos códigos fonte, através do Git, para o OpenShift Origin server.
 
-Finally, you will be asked to create a namespace for the provided user account. The namespace is a unique name which becomes part of your application URL. It is also commonly referred to as the users domain. The namespace can be at most 16 characters long and can only contain alphanumeric characters. There is currently a 1:1 relationship between usernames and namespaces. For the examples in the document, the namespace `<yourdomain>` will be used.
+Finalmente, será solicitado que você crie um namespace para a conta. O namespace deve ser único e será parte da URL de sua aplicação. Ele é comumente chamado de domain. O namespace pode ter no máximo 16 caracteres e pode conter apenas caracteres alfanuméricos. Há uma relação de 1:1 entre os usuários e os namespaces. Para os exemplos neste documento, o namespace `<yourdomain>` será utilizado. 
 
-=== What `rhc setup` Does
-This utility ensures that the user's operating system is configured properly to create and manage applications from the command line. Additionally, it creates a `.openshift` directory in the user's home directory and places a file there called `express.conf`. The contents of that file are as follows:
+=== O que o `rhc setup` faz
+Este comando assegura que o sistema operacional do usuário está configurado adequadamente para criar e gerenciar as aplicações através da linha de comando. Adicionalmente, ele cria um diretório `.openshift` na home do usuário e adiciona um arquivo chamado `express.conf`. O conteúdo do arquivo consiste no seguinte:
 
 ----
 # Default user login
@@ -57,7 +57,7 @@ default_rhlogin='<your username>'
 libra_server = '<your Broker hostname or IP>'
 ----
 
-This information will be provided to the `rhc` command line tool for every future command that is issued. If you want to run commands as a different user than the one listed above, you can either change the default login in this file or provide the _-l_ switch to the `rhc` command.
+Essa informação será fornecida para o `rhc` para cada futuro comando executado. Se você deseja rodar determinado comando como um usuário diferente, você tanto pode alterar o login no arquivo acima descrito ou adicionar a opção _-l_ para o `rhc`.
 
 == Application Development
 
